--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -1,7 +1,7 @@
 .post-grid {
     display:grid;
     grid-column-gap: 2rem;
-    grid-row-gap: 3rem;
+    grid-row-gap: 2rem;
     grid-template-columns:repeat(4, 1fr);
     padding: 0 1rem;
    }
